--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -2,7 +2,7 @@
 /*-----------------------*/
 .slider_main_page{
     max-width: 80%;
-    height: 350px;
+    min-height: 350px;
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
@@ -11,27 +11,25 @@
     justify-content: center;
     align-items: center;
 }
-.swiper-container{
-    cursor: pointer;
-}
-.swiper-wrapper{
-
-}
-.swiper-slide img{
-    width:100%;
-}
-.swiper-slide p{
-    /*position: absolute;*/
-    left: 0;
-    top: 20%;
-    z-index: 1;
-    color: #4a4843;
-    font-size: 24px;
+.carousel .slide .legend{
+    background-color: rgba(74, 72, 67, .8);
+    color: #f1f1f1;
     font-family: Lato Regular, sans-serif;
-    padding: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
-    background-color: #f1f1f1;
+    opacity: 0.5;
 }
+.carousel.carousel-slider .control-arrow{
+    background-color: #4a4843;
+}
+
+.carousel .thumb.selected,
+.carousel .thumb:hover{
+    border: 3px solid #4a4843;
+}
+.dot,.dot.selected{
+    outline: none;
+}
+
+
+
 /*-----------------------*/
 /*End Slider swiper*/
