--- a/src/components/FullArticle/fullArticle.css
+++ b/src/components/FullArticle/fullArticle.css
@@ -1,67 +1,57 @@
 /*Article*/
 /*-----------------------*/
-.content{
-    height: 250px;
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    overflow: hidden;
+.container_full{
+    grid-column: 1/10;
+    min-height: 900px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+.content_full{
+    min-height: 100px;
     margin-top: 25px;
-    cursor: pointer;
+    padding: 5px;
 }
-.content:hover{
-    background-color: #f1f1f1;
-    box-shadow: 0 0 5px rgba(74, 72, 67, .2);
-}
-.image{
-    grid-column: 1/4;
-    grid-row: 1/7;
+.image_full{
     overflow: hidden;
 }
-.image img{
+.image_full img{
     width: 100%;
 }
-.headline{
-    grid-column: 4/10;
-    grid-row: 1/2;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-left: 15px;
+.headline_full{
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
-.headline h2 a{
-    font-size: 24px;
+.headline_full h2 a{
+    font-size: 32px;
     font-family: Lato Regular, sans-serif;
     color: #4a4843;
 }
 .headline h2:hover a{
     text-decoration: underline;
 }
-.info{
-    grid-column: 4/10;
-    grid-row: 2/3;
+.info_full{
     display: flex;
-    justify-content: start;
+    /*justify-content: space-between;*/
     align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-left: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
-.date, .author, .rank, .tags{
-    margin-right: 15px;
+.date_full, .author_full, .rank_full, .tags_full{
+    margin-right: 20px;
     color: #4a4843;
     font-family: Lato Light, sans-serif;
     display: flex;
     align-items: center;
 }
-.text{
-    grid-column: 4/10;
-    grid-row: 3/7;
-    margin-left: 15px;
+.text_full{
+    margin-top: 25px;
 }
-.text p{
+.text_full p{
     font-family: Lato Light, sans-serif;
-    font-size: 14px;
+    font-size: 18px;
     color: #4a4843;
+    line-height: 1.5em;
 }
 /*-----------------------*/
 /*End Article*/
