--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -51,80 +51,8 @@
 
 /*Filter Article*/
 /*-----------------------*/
-.filter_headline{
-    width: 100%;
-    display: flex;
-    margin-top: 25px;
-}
-.recent, .popular, .archived{
-    background-color: #4a4843;
-    box-shadow: 0 0 5px rgba(74, 72, 67, .3);
-    padding: 10px;
-    border: 1px solid #f1f1f1;
-    width: calc(100% / 3);
-    cursor: pointer;
-    transition-duration: .3s;
-}
-.archived:hover{
-    background-color: #ff6f61;
-}
-.popular:hover{
-    background-color: #ff6f61;
-}
-.recent:hover{
-    background-color: #ff6f61;
-}
-.recent, .popular, .archived p{
-    color: #f1f1f1;
-    font-size: 18px;
-    font-family: Lato Regular, sans-serif;
-}
-.filter_article{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    margin-top: 15px;
-    cursor: pointer;
-}
-.filter_article:hover{
-    background-color: #f1f1f1;
-    box-shadow: 0 0 5px rgba(74, 72, 67, .2);
-}
-.filter_article_image{
-    grid-column: 1;
-    grid-row: 1/3;
-    overflow: hidden;
-}
-.filter_article_image img{
-    width: 100%;
-}
-.filter_article_headline{
-    grid-column: 2/4;
-    grid-row: 1;
-    margin-left: 10px;
-}
-.filter_article_headline h5 a{
-    font-size: 16px;
-    font-family: Lato Regular, sans-serif;
-    color: #4a4843;
-}
-.filter_article_headline:hover{
-    text-decoration: underline;
-}
-.filter_article_comment{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-left: 10px;
-}
-.filter_article_comment p{
-    margin-top: 10px;
-    padding: 5px;
-    background-color: #4a4843;
-    box-shadow: 0 0 5px rgba(74, 72, 67, .3);
-    color: white;
-    font-size: 12px;
-    font-family: Lato Light, sans-serif;
+.filter{
+    display: block;
 }
 /*-----------------------*/
 /*End Filter Article*/
