--- a/src/components/FullPage/fullPage.css
+++ b/src/components/FullPage/fullPage.css
@@ -1,5 +1,5 @@
-/*Article*/
-/*-----------------------*/
+/*FullPage*/
+/*----------------------------------------*/
 .container_full{
     grid-column: 1/10;
     min-height: 900px;
@@ -39,8 +39,8 @@
     color: #4a4843;
     line-height: 1.5em;
 }
-/*-----------------------*/
-/*End Article*/
+/*----------------------------------------------*/
+/*End FullPage*/
 
 /*General rules*/
 /*-----------------------------------------------------------------------------*/
