--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -1,3 +1,5 @@
+/*Pagination*/
+/*--------------------------------------------*/
 .pagination{
     margin-top: 25px;
     display: flex;
@@ -17,6 +19,8 @@
     background-color: #ff6f61;
     box-shadow: 0 0 5px rgba(74, 72, 67, .3);
 }
+/*--------------------------------------------*/
+/*And Pagination*/
 
 /*General rules*/
 /*-----------------------------------------------------------------------------*/
