--- a/src/components/spiner/preloader.css
+++ b/src/components/spiner/preloader.css
@@ -1,6 +1,10 @@
+/*Preloader*/
+/*----------------------------------*/
 .spinner_cover{
     display: flex;
     justify-content: center;
     padding-top: 25px;
 }
+/*----------------------------------*/
+/*And Preloader*/
 
