--- a/src/components/groupedArticle/groupedArticle.css
+++ b/src/components/groupedArticle/groupedArticle.css
@@ -1,3 +1,5 @@
+/*GroupedArticle*/
+/*-------------------------------------------*/
 .filter_article{
     display: grid;
     width: 100%;
@@ -24,7 +26,7 @@
     margin-left: 10px;
 }
 .filter_article_headline h5 a{
-    font-size: 16px;
+    font-size: 14px;
     font-family: Lato Regular, sans-serif;
     color: #4a4843;
 }
@@ -42,6 +44,55 @@
     background-color: #4a4843;
     box-shadow: 0 0 5px rgba(74, 72, 67, .3);
     color: white;
-    font-size: 12px;
+    font-size: 10px;
     font-family: Lato Light, sans-serif;
+}
+/*-----------------------------------------------*/
+/*And GroupedArticle*/
+
+
+/* Настольные компьютеры и ноутбуки ----------- */
+@media only screen  and (min-width: 1224px) {
+    /* стили */
+
+}
+
+/* iPad 3**********/
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+    /* стили */
+    .filter_article{display: block;}
+    .filter_article_headline{margin-left: 0;}
+    .filter_article_comment{margin-left: 0;}
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+    /* стили */
+    .filter_article{display: block}
+    .filter_article_headline{margin-left: 0;}
+    .filter_article_comment{margin-left: 0;}
+}
+
+/* iPads (горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    /* стили */
+    .filter_article{display: block}
+    .filter_article_headline{margin-left: 0;}
+    .filter_article_comment{margin-left: 0;}
+}
+
+/* iPads (вертикальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    /* стили */
+    .filter_article{display: block}
+    .filter_article_headline{margin-left: 0;}
+    .filter_article_comment{margin-left: 0;}
+}
+
+/* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+    /* стили */
+    .filter_article{display: block}
+    .filter_article_headline h5 a{font-size: 10px;}
+    .filter_article_comment p{font-size: 8px;}
+    .filter_article_headline{margin-left: 0;}
+    .filter_article_comment{margin-left: 0;}
 }
