--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -147,3 +147,45 @@ a{
 }
 /*-----------------------------------------------------------------------------*/
 /*End General rules*/
+
+
+/* Настольные компьютеры и ноутбуки ----------- */
+@media only screen  and (min-width: 1224px) {
+    /* стили */
+
+}
+
+/* iPad 3**********/
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+    /* стили */
+    .comment{display: block}
+    .user_comment p{font-size: 12px;}
+
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+    /* стили */
+    .comment{display: block}
+    .user_comment p{font-size: 12px;}
+
+}
+
+/* iPads (горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    /* стили */
+    .comment{display: block}
+    .user_comment p{font-size: 12px;}
+}
+
+/* iPads (вертикальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    /* стили */
+    .comment{display: block}
+    .user_comment p{font-size: 12px;}
+}
+
+/* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+    /* стили */
+    .comment{display: block}
+    .user_comment p{font-size: 10px;}
+}
