--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,5 +1,5 @@
 /*Slider swiper*/
-/*-----------------------*/
+/*------------------------------------------*/
 .slider_main_page{
     max-width: 90%;
     min-height: 350px;
@@ -29,8 +29,5 @@
 .dot,.dot.selected{
     outline: none;
 }
-
-
-
-/*-----------------------*/
+/*--------------------------------------------*/
 /*End Slider swiper*/
