--- a/src/components/Article/article.css
+++ b/src/components/Article/article.css
@@ -62,6 +62,7 @@
     font-family: Lato Light, sans-serif;
     font-size: 14px;
     color: #4a4843;
+    text-align: center;
 }
 .read_all{
     color: #ff6f61;
@@ -95,6 +96,19 @@ a{
     /* стили */
 
 }
+@media only screen  and (min-width: 1024px) and (max-width: 1224px){
+    /* стили */
+    .image{
+        grid-row: 1/3;
+
+    }
+    .description{
+        grid-column: 1/10;
+        grid-row: 3/4;
+        margin-left: 0;
+        margin-top: 15px;
+    }
+}
 
 /* iPad 3**********/
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
@@ -114,20 +128,20 @@ a{
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     /* стили */
     .content{display: block}
-    .date{margin-right: 10px;font-size: 12px;}
-    .author{margin-right: 10px;font-size: 12px;}
-    .rank{margin-right: 10px;font-size: 12px;}
-    .tags{margin-right: 10px;font-size: 12px;}
+    .date{margin-right: 10px;font-size: 14px;}
+    .author{margin-right: 10px;font-size: 14px;}
+    .rank{margin-right: 10px;font-size: 14px;}
+    .tags{margin-right: 10px;font-size: 14px;}
 }
 
 /* iPads (вертикальная) ----------- */
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
     /* стили */
     .content{display: block}
-    .date{margin-right: 10px;font-size: 12px;}
-    .author{margin-right: 10px;font-size: 12px;}
-    .rank{margin-right: 10px;font-size: 12px;}
-    .tags{margin-right: 10px;font-size: 12px;}
+    .date{margin-right: 10px;font-size: 14px;}
+    .author{margin-right: 10px;font-size: 14px;}
+    .rank{margin-right: 10px;font-size: 14px;}
+    .tags{margin-right: 10px;font-size: 14px;}
 }
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
